--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@
 DKR_TZ=Europe/Berlin
 DKR_DATA_DIR=/opt/monitoring
 IMG_VS_TRAEFIK=v2.4
+IMG_VS_CADVISOR=v0.37.5
 IMG_VS_PROMETHEUS=v2.21.0
 IMG_VS_PUSHGATEWAY=v1.4.0
 IMG_VS_ALERTMANAGER=v0.21.0
