--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -53,6 +53,11 @@ scrape_configs:
     static_configs:
       - targets: ['cadvisor:8080']
 
+  - job_name: 'traefik'
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['traefik:8082']
+
 #  - job_name: node
 #    scrape_interval: 15s
 #    static_configs:
