--- a/.env
+++ b/.env
@@ -7,5 +7,8 @@ IMG_VS_PROMETHEUS=v2.21.0
 IMG_VS_PUSHGATEWAY=v1.4.0
 IMG_VS_ALERTMANAGER=v0.21.0
 IMG_VS_GRAFANA=7.2.0
+IMG_VS_BLACKBOX=v0.18.0
+IMG_VS_WEB_HTTPD=2.4.46-alpine
+IMG_VS_WEB_NGINX=1.18.0-alpine
 GRAFANA_ADMIN_USER=admgfn
 GRAFANA_ADMIN_PASSWORD=admgfn
